--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    command: bash -c "python manage.py migrate && python manage.py loaddata property.json && python manage.py loaddata advertisement.json && python manage.py loaddata booking.json && python manage.py runserver 0.0.0.0:8000 "
     ports:
       - 8000:8000
     volumes:
